# libuipc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  INSTALLATION.md  auto_install.py  claude_plan.md  install.bat  install.sh  setup_pip.py
apps/tests/backends/cuda_mixed/: CMakeLists.txt  policy_contract.cu  scan_precision_contracts.py  socu_native_synthetic_solve.cu
apps/tests/sim_case/: 80_cuda_mixed_abd_bdf2_smoke.cpp  81_cuda_mixed_abd_fixed_joint_smoke.cpp  82_cuda_mixed_abd_prismatic_joint_external_force_smoke.cpp  83_cuda_mixed_abd_revolute_joint_external_force_smoke.cpp  84_cuda_mixed_fem_mas_hybrid_smoke.cpp  85_cuda_mixed_abd_ramp_friction_smoke.cpp  86_cuda_mixed_precision_contracts.cpp  CMakeLists.txt
experiments/socu_ordering_lab/: CMakeLists.txt
experiments/socu_ordering_lab/include/sol/: contact.h  graph.h  io.h  ordering.h  presets.h  reorder.h  types.h
experiments/socu_ordering_lab/src/: contact.cpp  graph.cpp  io.cpp  ordering.cpp  presets.cpp  reorder.cpp
experiments/socu_ordering_lab/src/cli/: bench_main.cpp
experiments/socu_ordering_lab/tests/: contact_tests.cpp  graph_tests.cpp  io_tests.cpp  ordering_tests.cpp  reorder_tests.cpp
experiments/tensor_core_gemm/: CMakeLists.txt  README.md
experiments/tensor_core_gemm/bench/: gemm_bench.cu
experiments/tensor_core_gemm/include/tcg/: gemm_case.h  registry.h  runner.h
experiments/tensor_core_gemm/src/: runner.cu
experiments/tensor_core_gemm/src/cli/: bench_main.cpp  test_main.cpp
experiments/tensor_core_gemm/src/generators/: gemm_cases.cpp
experiments/tensor_core_gemm/src/registry/: shape_registry.cpp
experiments/tensor_core_gemm/tests/: gemm_cases.cu
experiments/tensor_core_gemm/tools/: aggregate_gemm.py  emit_gemm_markdown.py  gemm_registry.py  profile_gemm_tensor_core.py  run_gemm_matrix.py
experiments/tensor_core_lab/: CMakeLists.txt  README.md
experiments/tensor_core_lab/bench/: abd12_assemble_bench.cu  abd12_bench.cu  abd12_bench_host.cpp  fem12_local_bench.cu  joint24_local_bench.cu  mas48_bench.cu  mas48_bench_host.cpp
experiments/tensor_core_lab/include/tcl/: backend_api.h  case_spec.h  device_info.h  metrics.h  mode.h  op_kind.h  registry.h  result_record.h  runner.h  tensor_shape.h
experiments/tensor_core_lab/src/: runner.cu
experiments/tensor_core_lab/src/backends/: fp32_simt.cu  fp64_ref.cu  tc32_tf32.cu
experiments/tensor_core_lab/src/common/: cuda_check.h  device_info.cu  event_timer.cu  event_timer.h  json_writer.cpp  json_writer.h  metrics.cpp  padding.cpp  padding.h  rng.cpp  rng.h
experiments/tensor_core_lab/src/generators/: abd12_assemble_cases.cpp  abd12_cases.cpp  fem12_local_cases.cpp  joint24_local_cases.cpp  mas48_cases.cpp
experiments/tensor_core_lab/src/ops/: abd12_assemble.cu  chol_factor.cu  chol_ops.h  fem12_assemble.cu  inverse_from_factor.cu  joint24_assemble.cu  solve_from_factor.cu
experiments/tensor_core_lab/src/registry/: case_registry.cpp  op_registry.cpp
experiments/tensor_core_lab/tests/: abd12_assemble.cu  abd12_factorize.cu  abd12_factorize_host.cpp  abd12_inverse.cu  abd12_inverse_host.cpp  abd12_solve.cu  abd12_solve_host.cpp  fem12_assemble.cu  joint24_assemble.cu  mas48_factorize.cu  mas48_factorize_host.cpp  mas48_inverse.cu  mas48_inverse_host.cpp  mas48_solve.cu  mas48_solve_host.cpp  smoke_device.cu  unsupported_arch.cu
experiments/tensor_core_lab/tools/: aggregate.py  emit_markdown.py  profile_tensor_core.py  run_matrix.py
src/backends/cuda_mixed/: CMakeLists.txt  energy_component_flags.cpp  energy_component_flags.h  entrance.cpp  kernel_cout.cu  kernel_cout.h  sim_engine.h  sim_engine_state.h  sim_system.cpp  sim_system.h
src/backends/cuda_mixed/active_set_system/: active_set_reporter.cu  active_set_reporter.h  al_stiffness_estimator.cu  al_stiffness_estimator.h  global_active_set_manager.cu  global_active_set_manager.h
src/backends/cuda_mixed/affine_body/: abd_active_set_reporter.cu  abd_active_set_reporter.h  abd_al_stiffness_estimator.cu  abd_al_stiffness_estimator.h  abd_diag_preconditioner.cu  abd_dytopo_effect_receiver.cu  abd_dytopo_effect_receiver.h  abd_energy.cu  abd_energy.h  abd_jacobi_matrix.cu  abd_jacobi_matrix.h  abd_line_search_reporter.cu  abd_line_search_reporter.h  abd_line_search_subreporter.cu  abd_line_search_subreporter.h  abd_linear_subsystem.cu  abd_linear_subsystem.h  abd_linear_subsystem_reporter.cu  abd_linear_subsystem_reporter.h  abd_time_integrator.cu  abd_time_integrator.h  abd_tolerance_checker.cu  affine_body_animator.cu  affine_body_animator.h  affine_body_body_reporter.cu  affine_body_body_reporter.h  affine_body_constitution.cu  affine_body_constitution.h  affine_body_constraint.cu  affine_body_constraint.h  affine_body_dynamics.cu  affine_body_dynamics.h  affine_body_external_body_force.cu  affine_body_external_force_manager.cu  affine_body_external_force_manager.h  affine_body_external_force_reporter.cu  affine_body_external_force_reporter.h  affine_body_kinetic.cu  affine_body_kinetic.h  affine_body_prismatic_joint_external_body_force.cu  (+19 more)
src/backends/cuda_mixed/algorithm/: geometry_instance_flattener.h  givens.hpp  matrix_converter.h  qr_svd.hpp
src/backends/cuda_mixed/animator/: animator.cu  animator.h  global_animator.cu  global_animator.h  utils.h
src/backends/cuda_mixed/collision_detection/: aabb.h  atomic_counting_lbvh.cu  atomic_counting_lbvh.h  global_trajectory_filter.cu  global_trajectory_filter.h  info_stackless_bvh.h  linear_bvh.h  simplex_trajectory_filter.cu  simplex_trajectory_filter.h  stackless_bvh.h  trajectory_filter.cu  trajectory_filter.h  vertex_half_plane_trajectory_filter.cu  vertex_half_plane_trajectory_filter.h
src/backends/cuda_mixed/contact_system/: adaptive_contact_parameter_reporter.cu  adaptive_contact_parameter_reporter.h  al_contact_function.h  al_simplex_frictional_contact.cu  al_simplex_frictional_contact.h  al_simplex_normal_contact.cu  al_simplex_normal_contact.h  al_vertex_half_plane_contact_function.h  al_vertex_half_plane_frictional_contact.cu  al_vertex_half_plane_frictional_contact.h  contact_coeff.h  (+20 more)
(+800 files in other folders)
